# reasoning

./: README.md  analysis.py  analysis_cat.py  asymmetric_filtering.py  batch_run.sh  check_equivalence.py  check_reasoning.py  compute_accuracy.py  eval_codegen.py  fewshot_prompting.py  filter.py  filter_by_posterior.py  fine-tuning.py  generate_baseline_finetuning_data.py  generate_data.py  generate_game_finetuning_data.py  generate_game_finetuning_data_all_ablation.py  generate_game_test_data.py  generate_mix_finetuning_data.py  generate_questions.py  generate_star_finetuning_data.py  inference.py  perplexity.py  postprocess_questions.py  process_data.py  prompting.py  pyproject.toml  requirements.txt  run.sh  run_clm_no_trainer.py  sample-model-a.py  sample.py  sample_code_a.py  sample_gpt_a.py  sample_model_a.py  sample_model_b.py  sample_star.py  search.sh  test_math.py  test_reasoning_math.py  (+6 more)
examples/apps/train/3/: code.py  plan.txt  question.txt
examples/apps/train/6/: code.py  gpt-plan.txt  question.txt
examples/apps/train/8/: code.py  plan.txt  question.txt
reasoning/prompt/: codegen.py  prompt.py
reasoning/viz/: viz_code.py
scripts/: analyze_apps.py  generate_plans.py  launch_sglang_server.sh  run_sample_code_a.sh  setup_env.sh
viz/: viz_code.py  viz_math.py  viz_math_example.py
